--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
     <title>Gamer Zone</title>
     <link rel="stylesheet" href="style/style.css">
-</head>
-<body>
 
+    <!-- Google font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <header>
+        <!-- navbar start -->
+        <div class="navbar">
+            <div class="logo">
+                <img src="images/Frame.png" alt="logo">
+                <h2><span class="primary_color">G</span>amer</h2>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="">about us</a></li>
+                    <li><a href="">developers</a></li>
+                    <span class="contact"><li><a href="">follow us on</a><a href="https://www.youtube.com/"><img src="images/youtube.png" alt=""></a>
+                        <a href="https://www.youtube.com/"><img src="images/tik-tok.png" alt=""></a>
+                    </li></span>
+                </ul>
+            </div>
+        </div>
+        <!-- navbar end -->
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
