addded responsive banner section

--- a/index.html
+++ b/index.html
@@ -26,13 +26,27 @@
                 <ul>
                     <li><a href="">about us</a></li>
                     <li><a href="">developers</a></li>
-                    <span class="contact"><li><a href="">follow us on</a><a href="https://www.youtube.com/"><img src="images/youtube.png" alt=""></a>
-                        <a href="https://www.youtube.com/"><img src="images/tik-tok.png" alt=""></a>
+                    <span class="contact"><li><a href="">follow us on</a><a href="https://www.youtube.com/" target="_blank"><img src="images/youtube.png" alt=""></a>
+                        <a href="https://www.youtube.com/" target="_blank" ><img src="images/tik-tok.png" alt=""></a>
                     </li></span>
                 </ul>
             </div>
         </div>
         <!-- navbar end -->
+        <!-- banner start -->
+        <div class="banner_container">
+            <div class="banner_content">
+                <h2 class="banner_title">Play Like The <br><span class="section_title_color">G.O.A.T.</span></h2>
+                <p class="banner_desc para_primary_color">1-Click instant play</p>
+                <p class="banner_desc para_primary_color">No Download</p>
+                <p class="banner_desc para_primary_color">1000s of supported online games</p>
+                <button class="btn_priamry">Sign In</button>
+                <button class="btn_priamry">Go Rogue</button>
+            </div>
+            <img src="images/Group 18.png" alt="banner">
+        
+        </div>
+        <!-- banner end-->
 
     </header>
     <main>
