added gamer portion

--- a/index.html
+++ b/index.html
@@ -44,13 +44,23 @@
                 <button class="btn_priamry">Go Rogue</button>
             </div>
             <img src="images/Group 18.png" alt="banner">
-        
+       
         </div>
         <!-- banner end-->
-
     </header>
     <main>
-
+        <!-- gamer section start -->
+        <section class="gamer">
+            <img src="images/pngwing 4.png" alt="gamer">
+            <div class="gamer_content">
+                <h3 class="section_title_color">We are gamer</h3>
+                <p class="para_primary_color">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                <button class="btn_priamry">know more</button>
+                <p class="para_primary_color purpose">Our purpose... </p>
+                <h4 class="">“unleash the gamer in everyone”</h4>
+            </div>
+        </section>
+        <!-- gamer section end -->
     </main>
     <footer>
 
