added funny image

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
                 <ul>
                     <li><a href="">about us</a></li>
                     <li><a href="">developers</a></li>
-                    <span class="contact"><li><a href="">follow us on</a><a href="https://www.youtube.com/" target="_blank"><img src="images/youtube.png" alt=""></a>
-                        <a href="https://www.youtube.com/" target="_blank" ><img src="images/tik-tok.png" alt=""></a>
-                    </li></span>
+                    <span class="contact">
+                        <li><a href="">follow us on</a><a href="https://www.youtube.com/" target="_blank"><img
+                                    src="images/youtube.png" alt=""></a>
+                            <a href="https://www.youtube.com/" target="_blank"><img src="images/tik-tok.png" alt=""></a>
+                        </li>
+                    </span>
                 </ul>
             </div>
         </div>
@@ -36,15 +39,15 @@
         <!-- banner start -->
         <div class="banner_container">
             <div class="banner_content">
-                <h2 class="banner_title">Play Like The <br><span class="section_title_color">G.O.A.T.</span></h2>
+                <h2 class="banner_title">Play Like The <br><span class="section_title_color goat">G.O.A.T.</span></h2>
                 <p class="banner_desc para_primary_color">1-Click instant play</p>
                 <p class="banner_desc para_primary_color">No Download</p>
                 <p class="banner_desc para_primary_color">1000s of supported online games</p>
                 <button class="btn_priamry">Sign In</button>
-                <button class="btn_priamry">Go Rogue</button>
+                <button class="btn_priamry" id="second_btn" >Go Rogue</button>
             </div>
             <img src="images/Group 18.png" alt="banner">
-       
+
         </div>
         <!-- banner end-->
     </header>
@@ -54,13 +57,41 @@
             <img src="images/pngwing 4.png" alt="gamer">
             <div class="gamer_content">
                 <h3 class="section_title_color">We are gamer</h3>
-                <p class="para_primary_color">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                <p class="para_primary_color">An international digital games and entertainment company. We develop,
+                    publish and distribute multiplayer mobile games. We reach over 400 million players each month and
+                    our audience keeps growing.</p>
                 <button class="btn_priamry">know more</button>
                 <p class="para_primary_color purpose">Our purpose... </p>
                 <h4 class="">“unleash the gamer in everyone”</h4>
             </div>
         </section>
         <!-- gamer section end -->
+        <!-- funny videos start -->
+        <section class="funny_container">
+            <div class="funny_content">
+                <h3>Online Games <span class="section_title_color">Funny Videos</span></h3>
+                <p class="para_primary_color">A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+            <div class="funny_img_wrap">
+                <div class="funny_img_container">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="funny_img_container">
+                    <img src="images/Rectangle 5.png" alt="">
+                    <p>Did you score? #unblockedgames# school</p>
+                </div>
+                <div class="funny_img_container">
+                    <img src="images/Rectangle 7.png" alt="">
+                    <p>Breaking game records like OG</p>
+                </div>
+                <div class="funny_img_container">
+                    <img src="images/Rectangle 6.png" alt="">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+            </div>
+        </section>
+        <!-- funny videos end -->
     </main>
     <footer>
 
