--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
                 <p class="banner_desc para_primary_color">No Download</p>
                 <p class="banner_desc para_primary_color">1000s of supported online games</p>
                 <button class="btn_priamry">Sign In</button>
-                <button class="btn_priamry" id="second_btn" >Go Rogue</button>
+                <button class="btn_priamry" id="second_btn">Go Rogue</button>
             </div>
-            <img src="images/Group 18.png" alt="banner">
+            <div class="banner_img">
+                <img src="images/Group 18.png" alt="banner">
+            </div>
 
         </div>
         <!-- banner end-->
@@ -92,6 +94,40 @@
             </div>
         </section>
         <!-- funny videos end -->
+        <!-- downloads start -->
+        <section class="downloads_container">
+            <div class="download_title">
+                <h3 class="funny_content"><span class="section_title_color">Play Instantly,</span><br>
+                    No Downloads <br>
+                    No Installs.</h3>
+                <p class="para_primary_color">Play games online for free without <br>downloading. Just click the Play
+                    button <br>
+                    and play instantly in your browser.</p>
+            </div>
+            <div class="download_image">
+                <img src="images/Rectangle 55.png" alt="">
+                <div class="badge_container">
+                    <img src="images/Rectangle 66.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- downloads end -->
+        <!-- download 2nd start-->
+        <section class="downloads_container2">
+            <div class="downloads_img_container2">
+                <div class="play_images">
+                    <img src="images/Rectangle 67.png" alt="">
+                </div>
+                <div class="image_badge">
+                    <img src="images/Rectangle 78.png" alt="">
+                </div>
+            </div>
+            <div class="downloads_content2">
+                <h2><span class="section_title_color">Play Games <br> Online</span> Anywhere, Anytime!</h2>
+                <p class="para_primary_color">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
+            </div>
+        </section>
+        <!-- download 2nd end-->
     </main>
     <footer>
 
