added final footer section

--- a/index.html
+++ b/index.html
@@ -124,12 +124,53 @@
             </div>
             <div class="downloads_content2">
                 <h2><span class="section_title_color">Play Games <br> Online</span> Anywhere, Anytime!</h2>
-                <p class="para_primary_color">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
+                <p class="para_primary_color">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play
+                    your favorite games online for free, any time, anywhere , on any device.</p>
             </div>
         </section>
         <!-- download 2nd end-->
+        <!-- buton area start -->
+        <div class="button_container">
+            <button class="all"><img src="images/Rectangle 11.png" alt="">Action Games</button>
+            <button class="all"><img src="images/Rectangle 12.png" alt="">Adventure Games</button>
+            <button class="all"><img src="images/Rectangle 13.png" alt="">Arcade Games</button>
+            <button class="all"><img src="images/Rectangle 14.png" alt="">Educational Games</button>
+            <button class="all"><img src="images/Rectangle 15.png" alt="">Word Games</button>
+            <button class="all"><img src="images/Rectangle 16.png" alt="">Role Palying Games</button>
+            <button class="all"><img src="images/Rectangle 17.png" alt="">Music & Audio Games</button>
+            <button class="all"><img src="images/Rectangle 18.png" alt="">Puzzle Games</button>
+            <button class="all"><img src="images/Rectangle 19.png" alt="">Strategy Games</button>
+
+        </div>
+        <!-- buton area end -->
     </main>
     <footer>
+        <div class="footer_container">
+            <div class="footer_title">
+                <img src="images/Frame.png" alt="">
+                <h3><span class="primary_color">G</span>amer</h3>
+            </div>
+            <div class="footer_menu">
+                <ul>
+                    <li><a href="">Our Story</a></li>
+                    <li><a href="">Games</a></li>
+                    <li><a href="">Web Games</a></li>
+                    <li><a href="">Careers</a></li>
+                    <li><a href="">Support</a></li>
+                    <li><a href="">My Account</a></li>
+                </ul>
+            </div>
+            <div class="privacy">
+                <ul>
+                    <li><a href="">Terms and Conditions</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                    <li><a href="">Cookie Policy</a></li>
+                    <li><a href="">Privacy Settings</a></li>
+                </ul>
+            </div>
+            <p class="privacy li a ">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh | ismail</p>
+
+        </div>
 
     </footer>
 </body>
