--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <li><a href="">Privacy Settings</a></li>
                 </ul>
             </div>
-            <p class="privacy li a ">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh | ismail</p>
+            <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh | ismail</p>
 
         </div>
 
