--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
     <title>Gamer Zone</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/responsive.css">
 
     <!-- Google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -117,10 +118,11 @@
             <div class="downloads_img_container2">
                 <div class="play_images">
                     <img src="images/Rectangle 67.png" alt="">
+                    <div class="image_badge">
+                        <img src="images/Rectangle 78.png" alt="">
+                    </div>
                 </div>
-                <div class="image_badge">
-                    <img src="images/Rectangle 78.png" alt="">
-                </div>
+
             </div>
             <div class="downloads_content2">
                 <h2><span class="section_title_color">Play Games <br> Online</span> Anywhere, Anytime!</h2>
